--- a/BattleshipGame/BattleshipGame.csproj
+++ b/BattleshipGame/BattleshipGame.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NLog" Version="4.7.0" />
+  </ItemGroup>
+
 
 </Project>
